# mini-mario-game

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
assets/shaders/: default.frag  default.vert
src/: App.cpp  App.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  main.cpp
src/entities/: Box.cpp  Box.h  Rectangle.cpp  Rectangle.h
src/input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/math/: Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  SquareMatrix.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  Vector.h
src/renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  RendererController.cpp  RendererController.h  VertexBuffer.cpp  VertexBuffer.h
src/scenes/: BouncyRectangles.cpp  BouncyRectangles.h  BoxedIn.cpp  BoxedIn.h  Painter.cpp  Painter.h
